--- a/index.html
+++ b/index.html
@@ -1,43 +1,438 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Sept-22</title>
-    <!-- own css -->
-    <link rel="stylesheet" href="./components/style.css" />
-    <!-- boxicons -->
-    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
-  </head>
-  <body>
-    <header class="l-header">
-      <nav class="nav bd-grid">
-        <div class="nav__toggle" id="nav-toggle">
-          <i class="bx bx-menu"></i>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio Sept-22</title>
+  <!-- own css -->
+  <link rel="stylesheet" href="./components/style.css" />
+  <!-- boxicons -->
+  <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="l-header">
+    <nav class="nav bd-grid">
+      <div class="nav__toggle" id="nav-toggle">
+        <i class="bx bx-menu"></i>
+      </div>
+
+      <div>
+        <a href="#" class="nav__logo">Basar</a>
+      </div>
+
+      <div class="nav__menu" id="nav-menu">
+        <div class="nav__close" id="nav-close">
+          <i class="bx bx-x"></i>
         </div>
 
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+          <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
+          <li class="nav__item"><a href="#works" class="nav__link">Works</a></li>
+          <li class="nav__item"><a href="#contact" class="nav__link">Contact me</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="l-main">
+
+    <!-- Home -->
+    <section class="home" id="home">
+      <div class="home__container bd-grid">
+        <div class="home__data">
+          <div class="home__img">
+            <img src="./components/image/Photo.jpg" />
+          </div>
+          <h1 class="home__title">Md Khairul Basar</h1>
+          <span class="home__profession">Frontend Developer</span>
+          <div class="home__social">
+            <a href="#" class="home__social-link"><i class='bx bxl-linkedin-square'></i></i></a>
+            <a href="#" class="home__social-link"><i class="bx bxl-github"></i></a>
+            <a href="#" class="home__social-link"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="#" class="home__social-link"><i class='bx bxl-instagram'></i></a>
+          </div>
+          <a download href="./components/Md_Khairul_Basar_Resume.pdf" class="button home__button">Download Resume</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- About -->
+    <section class="about section" id="about">
+      <span class="section-subtitle">My Intro</span>
+      <h2 class="section-title">About me</h2>
+
+      <div class="about__container bd-grid">
+        <div class="about__data">
+          <p class="about__description">Hi, I'm a Frontend Developer,
+            passionate about creation and developing web interfaces.
+            I have been working at Synamedia since May, 2022.</p>
+          <img src="./components/image/About.jpg" alt="" class="about__img">
+        </div>
         <div>
-          <a href="#" class="nav__logo">Basar</a>
-        </div>
+          <div class="about__information">
+            <h3 class="about__information-title"> Information</h3>
 
-        <div class="nav__menu" id="nav-menu">
-          <div class="nav__close" id="nav-close">
-            <i class="bx bx-x"></i>
+            <div class="about__information-data">
+              <i class="bx bx-user about__information-icon"></i>
+              <span>Md Khairul Basar</span>
+            </div>
+
+            <div class="about__information-data">
+              <i class="bx bx-phone about__information-icon"></i>
+              <span>+91 7866086100</span>
+            </div>
+
+            <div class="about__information-data">
+              <i class="bx bx-envelope about__information-icon"></i>
+              <span>k.basar89@gmail.com</span>
+            </div>
+
+          </div>
+          <div class="about__information">
+            <h3 class="about__information-title"> Experience and Support</h3>
+
+            <div class="about__information-data">
+              <i class="bx bx-medal about__information-icon"></i>
+              <div>
+                <span class="about__information-subtitle">6 Months</span>
+                <span class="about__information-subtitle-small">Experience</span>
+              </div>
+            </div>
+
+            <div class="about__information-data">
+              <i class="bx bx-briefcase about__information-icon"></i>
+              <div>
+                <span class="about__information-subtitle">Video Technologies</span>
+                <span class="about__information-subtitle-small">Completed</span>
+              </div>
+            </div>
+
+            <div class="about__information-data">
+              <i class="bx bx-support about__information-icon"></i>
+              <div>
+                <span class="about__information-subtitle">Available</span>
+                <span class="about__information-subtitle-small">Online 24/7</span>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Skills -->
+    <section class="skills section" id="skills">
+      <span class="section-subtitle">Why Choose me ?</span>
+      <h2 class="section-title">My expertise Area</h2>
+
+      <div class="skills__container bd-grid">
+        <div class="skills__content">
+          <h3 class="skills__subtitle">Frontend</h3>
+
+          <div class="skills__data">
+            <span class="skills__name">HTML</span>
+            <span class="skills__number">80%</span>
+            <span class="skills__bar skills__html"></span>
           </div>
 
-          <ul class="nav__list">
-            <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-            <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-            <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-            <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
-            <li class="nav__item"><a href="#works" class="nav__link">Works</a></li>
-            <li class="nav__item"><a href="#contacts" class="nav__link">Contact me</a></li>
-          </ul>
+          <div class="skills__data">
+            <span class="skills__name">CSS</span>
+            <span class="skills__number">80%</span>
+            <span class="skills__bar skills__css"></span>
+          </div>
+
+          <div class="skills__data">
+            <span class="skills__name">JavaScript</span>
+            <span class="skills__number">70%</span>
+            <span class="skills__bar skills__js"></span>
+          </div>
+
+          <div class="skills__data">
+            <span class="skills__name">React JS</span>
+            <span class="skills__number">60%</span>
+            <span class="skills__bar skills__react"></span>
+          </div>
         </div>
-      </nav>
-    </header>
-    <main class="l-main">...</main>
-    <script src="./components/javaScript.js"></script>
-  </body>
+
+        <div class="skills__content">
+          <h3 class="skills__subtitle">Backend</h3>
+
+          <div class="skills__data">
+            <span class="skills__name">Java</span>
+            <span class="skills__number">80%</span>
+            <span class="skills__bar skills__java"></span>
+          </div>
+
+          <div class="skills__data">
+            <span class="skills__name">Python</span>
+            <span class="skills__number">60%</span>
+            <span class="skills__bar skills__python"></span>
+          </div>
+
+          <div class="skills__data">
+            <span class="skills__name">SQL</span>
+            <span class="skills__number">80%</span>
+            <span class="skills__bar skills__sql"></span>
+          </div>
+
+          <!-- <div class="skills__data">
+            <span class="skills__name">Node JS</span>
+            <span class="skills__number">60%</span>
+            <span class="skills__bar skills__node"></span>
+          </div> -->
+
+        </div>
+      </div>
+    </section>
+
+    <!-- education -->
+    <section class="education section">
+      <span class="section-subtitle">Qualification</span>
+      <h2 class="section-title">My Education</h2>
+
+      <div class="education__container bd-grid">
+        <div class="education_content">
+          <div>
+            <h3 class="education__year">2016-2020</h3>
+            <span class="education__university">JNTU Hyderabad</span>
+          </div>
+
+          <div class="education__time">
+            <span class="education__rounder"></span>
+            <span class="education__line"></span>
+          </div>
+
+          <div>
+            <h3 class="education__race">B.Tech</h3>
+            <span class="education__specialty">Electrical and Electronics Engineering</span>
+          </div>
+        </div>
+
+        <div class="education_content">
+          <div>
+            <h3 class="education__year">2014-2016</h3>
+            <span class="education__university">BSEB, Patna</span>
+          </div>
+
+          <div class="education__time">
+            <span class="education__rounder"></span>
+            <span class="education__line"></span>
+          </div>
+
+          <div>
+            <h3 class="education__race">Intermediate</h3>
+            <span class="education__specialty">Science</span>
+          </div>
+        </div>
+
+        <div class="education_content">
+          <div>
+            <h3 class="education__year">2010-2012</h3>
+            <span class="education__university">WBBSE</span>
+          </div>
+
+          <div class="education__time">
+            <span class="education__rounder"></span>
+            <span class="education__line"></span>
+          </div>
+
+          <div>
+            <h3 class="education__race">Secondary</h3>
+            <span class="education__specialty">Science</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- service -->
+    <section class="service section" id="services">
+      <span class="section-subtitle">What I Offer</span>
+      <h2 class="section-title">My Services</h2>
+
+      <div class="services__container bd-grid">
+
+        <div class="services__content">
+          <i class="bx bx-code services__icon"></i>
+          <h3 class="services__title">Web Design</h3>
+          <p class="services__description">This service that I offer is of high quality, and above all experience that I
+            have in the labour field for many years.</p>
+        </div>
+
+        <div class="services__content">
+          <i class="bx bx-pen services__icon"></i>
+          <h3 class="services__title">Graphic Design</h3>
+          <p class="services__description">This service that I offer is of high quality, and above all experience that I
+            have in the labour field for many years.</p>
+        </div>
+
+        <div class="services__content">
+          <i class="bx bx-brush services__icon"></i>
+          <h3 class="services__title">UI/UX</h3>
+          <p class="services__description">This service that I offer is of high quality, and above all experience that I
+            have in the labour field for many years.</p>
+        </div>
+
+        <div class="services__content">
+          <i class="bx bx-server services__icon"></i>
+          <h3 class="services__title">Backend Development</h3>
+          <p class="services__description">This service that I offer is of high quality, and above all experience that I
+            have in the labour field for many years.</p>
+        </div>
+
+        <div class="services__content">
+          <i class="bx bx-pencil services__icon"></i>
+          <h3 class="services__title">Content Writing</h3>
+          <p class="services__description">This service that I offer is of high quality, and above all experience that I
+            have in the labour field for many years.</p>
+        </div>
+
+        <div class="services__content">
+          <i class="bx bx-mobile-alt services__icon"></i>
+          <h3 class="services__title">Interface Mobile</h3>
+          <p class="services__description">This service that I offer is of high quality, and above all experience that I
+            have in the labour field for many years.</p>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- Project in mind -->
+    <section class="project section">
+      <div class="project__container bd-grid">
+        <div class="project__date">
+          <h2 class="section-title project__title">Do you have a project in mind</h2>
+          <p class="project__description">If you have a project that you want </p>
+          <a href="#contact" class="button button__light"></a>
+        </div>
+
+        <img src="./components/image/20200928_163906_HDR.jpg" alt="" class="project__img">
+      </div>
+    </section>
+
+    <!-- Works -->
+    <section class="works section" id="works">
+      <span class="section-subtitle">My Portfolio</span>
+      <h2 class="section-title"> Recent Works </h2>
+
+      <div class="works__container bd-grid">
+        <div class="works__img">
+          <img src="./components/image/image16x9.jpg" alt="">
+
+          <div class="works__data">
+            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <span class="work__title">Work 1</span>
+          </div>
+        </div>
+
+        <div class="works__img">
+          <img src="./components/image/image16x9.jpg" alt="">
+
+          <div class="works__data">
+            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <span class="work__title">Work 2</span>
+          </div>
+        </div>
+
+        <div class="works__img">
+          <img src="./components/image/image16x9.jpg" alt="">
+
+          <div class="works__data">
+            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <span class="work__title">Work 3</span>
+          </div>
+        </div>
+
+        <div class="works__img">
+          <img src="./components/image/image16x9.jpg" alt="">
+
+          <div class="works__data">
+            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <span class="work__title">Work 4</span>
+          </div>
+        </div>
+
+        <div class="works__img">
+          <img src="./components/image/image16x9.jpg" alt="">
+
+          <div class="works__data">
+            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <span class="work__title">Work 5</span>
+          </div>
+        </div>
+
+        <div class="works__img">
+          <img src="./components/image/image16x9.jpg" alt="">
+
+          <div class="works__data">
+            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <span class="work__title">Work 6</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section class="contact section" id="contact">
+      <span class="section-subtitle">Contact me</span>
+      <h2 class="section-title">Get In Touch</h2>
+
+      <div class="contact__container bd-grid">
+        <form action="" class="contact__form">
+          <div class="contact__inputs">
+            <input type="text" placeholder="Name" class="contact__input">
+            <input type="mail" placeholder="Email" class="contact__input">
+          </div>
+          <input type="text" placeholder="Project" class="contact__input">
+          <textarea name="" id="" cols="0" rows="10" placeholder="Message" class="contact__input"></textarea>
+          <input type="submit" value="Send Message" class="Button contact__button">
+        </form>
+
+        <div class="contact__info">
+          <h3 class="contact__subtitle">Call me</h3>
+          <span class="contact__text">7866086100</span>
+          <span class="contact__text">7866086100</span>
+        </div>
+
+        <div class="contact__info">
+          <h3 class="contact__subtitle">E-mail</h3>
+          <span class="contact__text">k.basar89@gmail.com</span>
+          <span class="contact__text">contact.com</span>
+        </div>
+
+        <div class="contact__info">
+          <h3 class="contact__subtitle">Location</h3>
+          <span class="contact__text">Malda, West Bengal</span>
+          <span class="contact__text">Pin- 732102</span>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- footer -->
+    <section class="footer section">
+      <div class="footer__container bd-grid">
+        <h1 class="footer-title">K Basar</h1>
+        <p class="footer__description">I am Khairul Basar and this is my personal portfolio website</p>
+
+        <div class="footer__social">
+          <a href="#" class="footer__link"><i class="bx bxl-facebook-circle"></i></a>
+          <a href="#" class="footer__link"><i class="bx bxl-instagram"></i></a>
+          <a href="#" class="footer__link"><i class="bx bxl-linkedin-square"></i></a>
+        </div>
+
+        <p class="footer__copy">All rights reserve by K.Basar</p>
+      </div>
+    </section>
+
+  </main>
+
+  <!-- main javaScript -->
+  <script src="./components/javaScript.js"></script>
+</body>
 </html>
