--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
           <h1 class="home__title">Md Khairul Basar</h1>
           <span class="home__profession">Frontend Developer</span>
           <div class="home__social">
-            <a href="#" class="home__social-link"><i class='bx bxl-linkedin-square'></i></i></a>
-            <a href="#" class="home__social-link"><i class="bx bxl-github"></i></a>
-            <a href="#" class="home__social-link"><i class='bx bxl-facebook-circle'></i></a>
-            <a href="#" class="home__social-link"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.linkedin.com/in/k-basar/" target="_blank" class="home__social-link"><i class='bx bxl-linkedin-square'></i></i></a>
+            <a href="https://github.com/K-Basar96" target="_blank" class="home__social-link"><i class="bx bxl-github"></i></a>
+            <a href="https://wa.me/917866086100?text=Hi%20Khairul%2C%0Ajust%20now%20I%20have%20checked%20your%20portfolio%20webpage." target="_blank" class="home__social-link"><i class='bx bxl-whatsapp' ></i></a>
+            <a href="https://www.instagram.com/k.basar786/" target="_blank" class="home__social-link"><i class='bx bxl-instagram'></i></a>
           </div>
           <a download href="./components/Md_Khairul_Basar_Resume.pdf" class="button home__button">Download Resume</a>
         </div>
@@ -106,7 +106,7 @@
             <div class="about__information-data">
               <i class="bx bx-briefcase about__information-icon"></i>
               <div>
-                <span class="about__information-subtitle">Video Technologies</span>
+                <span class="about__information-subtitle">Infinite- Connected TV and Operational Application </span>
                 <span class="about__information-subtitle-small">Completed</span>
               </div>
             </div>
@@ -195,7 +195,7 @@
       <h2 class="section-title">My Education</h2>
 
       <div class="education__container bd-grid">
-        <div class="education_content">
+        <div class="education__content">
           <div>
             <h3 class="education__year">2016-2020</h3>
             <span class="education__university">JNTU Hyderabad</span>
@@ -212,7 +212,7 @@
           </div>
         </div>
 
-        <div class="education_content">
+        <div class="education__content">
           <div>
             <h3 class="education__year">2014-2016</h3>
             <span class="education__university">BSEB, Patna</span>
@@ -229,7 +229,7 @@
           </div>
         </div>
 
-        <div class="education_content">
+        <div class="education__content">
           <div>
             <h3 class="education__year">2010-2012</h3>
             <span class="education__university">WBBSE</span>
@@ -390,25 +390,25 @@
           </div>
           <input type="text" placeholder="Project" class="contact__input">
           <textarea name="" id="" cols="0" rows="10" placeholder="Message" class="contact__input"></textarea>
-          <input type="submit" value="Send Message" class="Button contact__button">
+          <input type="submit" value="Send Message" class="button contact__button">
         </form>
 
         <div class="contact__info">
           <h3 class="contact__subtitle">Call me</h3>
-          <span class="contact__text">7866086100</span>
-          <span class="contact__text">7866086100</span>
+          <span class="contact__text">+91 7866086100</span>
+          <span class="contact__text">+91 9735209909</span>
         </div>
 
         <div class="contact__info">
           <h3 class="contact__subtitle">E-mail</h3>
           <span class="contact__text">k.basar89@gmail.com</span>
-          <span class="contact__text">contact.com</span>
+          
         </div>
 
         <div class="contact__info">
           <h3 class="contact__subtitle">Location</h3>
-          <span class="contact__text">Malda, West Bengal</span>
-          <span class="contact__text">Pin- 732102</span>
+          <span class="contact__text">Palashbona, Malda</span>
+          <span class="contact__text">West Bengal- 732102</span>
         </div>
 
       </div>
@@ -421,9 +421,9 @@
         <p class="footer__description">I am Khairul Basar and this is my personal portfolio website</p>
 
         <div class="footer__social">
-          <a href="#" class="footer__link"><i class="bx bxl-facebook-circle"></i></a>
-          <a href="#" class="footer__link"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="footer__link"><i class="bx bxl-linkedin-square"></i></a>
+          <a href="https://www.facebook.com/k.basar89" class="footer__link"><i class="bx bxl-facebook-circle"></i></a>
+          <a href="https://www.instagram.com/k.basar786/" class="footer__link"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/k-basar/" class="footer__link"><i class="bx bxl-linkedin-square"></i></a>
         </div>
 
         <p class="footer__copy">All rights reserve by K.Basar</p>
