--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <!-- footer -->
     <section class="footer section">
       <div class="footer__container bd-grid">
-        <h1 class="footer-title">K Basar</h1>
+        <h1 class="footer-title">Md Khairul Basar</h1>
         <p class="footer__description">I am Khairul Basar and this is my personal portfolio website</p>
 
         <div class="footer__social">
