--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           </div>
           <input type="text"  required name="Project" placeholder="Project" class="contact__input">
           <textarea required name="Message" rows="5" placeholder="Message" class="contact__input"></textarea>
-          <input type="hidden" name="_next" value="http://127.0.0.1:5500/#contact">
+          <input type="hidden" name="_next" value="https://k-basar96.github.io/portfolio/#contact">
           <input type="submit" value="Send Message" class="button contact__button">
         </form>
 
