update 1st works

--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@
         <div class="services__content">
           <i class="bx bx-code services__icon"></i>
           <h3 class="services__title">Web Design</h3>
-          <p class="services__description">This service that I offer is of high quality, and above all experience that I
-            have in the labour field for many years.</p>
+          <p class="services__description">I always made a high quality and responsive website by using the latest technologies, which will be very good in performance to make the user satisfied.</p>
         </div>
 
         <div class="services__content">
@@ -294,8 +293,7 @@
         <div class="services__content">
           <i class="bx bx-mobile-alt services__icon"></i>
           <h3 class="services__title">Interface Mobile</h3>
-          <p class="services__description">This service that I offer is of high quality, and above all experience that I
-            have in the labour field for many years.</p>
+          <p class="services__description">I always prefer to do the website which is support cross-platform like PC as well as Mobile devices.</p>
         </div>
 
       </div>
@@ -306,11 +304,11 @@
       <div class="project__container bd-grid">
         <div class="project__date">
           <h2 class="section-title project__title">Do you have a project in mind</h2>
-          <p class="project__description">If you have a project that you want </p>
-          <a href="#contact" class="button button__light"></a>
+          <p class="project__description">If you have a project that you want to execute, do not hesitate to tell me what it is, and what service I can offer you in this project, contact me directly.</p>
+          <a href="#contact" class="button button__light">Contact Me</a>
         </div>
 
-        <img src="./components/image/20200928_163906_HDR.jpg" alt="" class="project__img">
+        <img src="./components/image/mind.jpg" alt="" class="project__img">
       </div>
     </section>
 
@@ -321,16 +319,16 @@
 
       <div class="works__container bd-grid">
         <div class="works__img">
-          <img src="./components/image/image16x9.jpg" alt="">
+          <img src="./components/image/portfolio_home.png" alt="">
 
           <div class="works__data">
-            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
-            <span class="work__title">Work 1</span>
+            <a href="https://k-basar96.github.io/portfolio/" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <span class="work__title">Portfolio Website</span>
           </div>
         </div>
 
         <div class="works__img">
-          <img src="./components/image/image16x9.jpg" alt="">
+          <img src="./components/image/portfolio_home.png" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -339,7 +337,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/image16x9.jpg" alt="">
+          <img src="./components/image/portfolio_home.png" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -348,7 +346,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/image16x9.jpg" alt="">
+          <img src="./components/image/portfolio_home.png" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -357,7 +355,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/image16x9.jpg" alt="">
+          <img src="./components/image/portfolio_home.png" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -366,7 +364,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/image16x9.jpg" alt="">
+          <img src="./components/image/portfolio_home.png" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
