--- a/index.html
+++ b/index.html
@@ -328,16 +328,16 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/portfolio_home.png" alt="">
+          <img src="./components/image/Form_Validation.png" alt="">
 
           <div class="works__data">
-            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
-            <span class="work__title">Work 2</span>
+            <a href="https://github.com/K-Basar96/employee.git" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <span class="work__title">Form Validating using React</span>
           </div>
         </div>
 
         <div class="works__img">
-          <img src="./components/image/portfolio_home.png" alt="">
+          <img src="./components/image/work-3" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -346,7 +346,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/portfolio_home.png" alt="">
+          <img src="./components/image/work-4" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -355,7 +355,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/portfolio_home.png" alt="">
+          <img src="./components/image/work-5" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -364,7 +364,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/portfolio_home.png" alt="">
+          <img src="./components/image/work-6" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
