--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/work-3" alt="">
+          <img src="./components/image/Restaurant.png" alt="">
 
           <div class="works__data">
-            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
+            <a href="https://github.com/K-Basar96/restaurant.git" class="works__link"><i class="bx bx-link-alt"></i></a>
             <span class="work__title">Work 3</span>
           </div>
         </div>
