--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <div>
-        <a href="#" class="nav__logo">Basar</a>
+        <a href="#" class="nav__logo">Khairul</a>
       </div>
 
       <div class="nav__menu" id="nav-menu">
