--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
             <span class="skills__bar skills__sql"></span>
           </div>
 
-          <!-- <div class="skills__data">
+          <div class="skills__data">
             <span class="skills__name">Node JS</span>
             <span class="skills__number">60%</span>
             <span class="skills__bar skills__node"></span>
-          </div> -->
+          </div>
 
         </div>
       </div>
@@ -341,12 +341,12 @@
 
           <div class="works__data">
             <a href="https://github.com/K-Basar96/restaurant.git" class="works__link"><i class="bx bx-link-alt"></i></a>
-            <span class="work__title">Work 3</span>
+            <span class="work__title">Restaurant product page</span>
           </div>
         </div>
 
         <div class="works__img">
-          <img src="./components/image/work-4" alt="">
+          <img src="./components/image/frontend_development.jpg" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -355,7 +355,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/work-5" alt="">
+          <img src="./components/image/frontend_development.jpg" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
@@ -364,7 +364,7 @@
         </div>
 
         <div class="works__img">
-          <img src="./components/image/work-6" alt="">
+          <img src="./components/image/frontend_development.jpg" alt="">
 
           <div class="works__data">
             <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
