--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="./components/image/Photo.jpg" />
           </div>
           <h1 class="home__title">Md Khairul Basar</h1>
-          <span class="home__profession">Frontend Developer</span>
+          <span class="home__profession">Full Stack Developer</span>
           <div class="home__social">
             <a href="https://www.linkedin.com/in/k-basar/" target="_blank" class="home__social-link"><i class='bx bxl-linkedin-square'></i></i></a>
             <a href="https://github.com/K-Basar96" target="_blank" class="home__social-link"><i class="bx bxl-github"></i></a>
