--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
           <h3 class="skills__subtitle">Backend</h3>
 
           <div class="skills__data">
-            <span class="skills__name">Java</span>
+            <span class="skills__name">PHP</span>
             <span class="skills__number">80%</span>
             <span class="skills__bar skills__java"></span>
           </div>
 
           <div class="skills__data">
-            <span class="skills__name">Python</span>
-            <span class="skills__number">60%</span>
+            <span class="skills__name">Node JS</span>
+            <span class="skills__number">70%</span>
             <span class="skills__bar skills__python"></span>
           </div>
 
@@ -180,7 +180,7 @@
           </div>
 
           <div class="skills__data">
-            <span class="skills__name">Node JS</span>
+            <span class="skills__name">Java</span>
             <span class="skills__number">60%</span>
             <span class="skills__bar skills__node"></span>
           </div>
